Cosmetic changes to fix displaying menu options on smaller screens. Fixes #34

--- a/app/components/CoverPreview.css
+++ b/app/components/CoverPreview.css
@@ -1,6 +1,6 @@
 .cover_preview_container {
-  position: absolute;
-  bottom: 140px;
   font-size: 16px;
   cursor: default !important;
+  display: table-row;
+  height: 150px;
 }
