--- a/app/components/Player.css
+++ b/app/components/Player.css
@@ -1,8 +1,8 @@
 .player_container {
-  position: absolute;
   width: 100%;
-  bottom: 0;
+  height: 100px;
   text-align: center;
+  display: table-row;
 }
 
 a.player_btn {
